# chip-8-emulator

./: CMakeLists.txt  README.md
src/: chip8.cpp  chip8.hpp  constants.hpp  main.cpp
